<resources>

    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="create_account">Create Account</string>
    <string name="already_has_account">Already on Letz Unite? Sign In</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_blood_request">Blood Request</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_rewards">Rewards</string>
    <string name="otp">OTP</string>
    <string name="reset_password">Reset Password</string>
    <string name="resend_otp">Didn\'t get OTP? RESEND</string>
    <string name="get_otp_to_reset_password">Get OTP</string>
    <string name="available_timing">Available Timing</string>
    <string name="blood_type">Blood Type</string>
    <string name="description_forgot_password">Enter your email address and we will send you an OTP to reset your password.</string>
    <string name="desc_reset_password">Please enter OTP, which we have sent you to your registered mail to reset your password.</string>

    <string name="invalid_email_id">Invalid email Id.</string>
    <string name="error_empty_field">This field should not be empty.</string>

    <string name="error_connection">Internet connection unavailable.</string>
    <string name="error_time_out">Time out! Your connection is very slow. Please try again.</string>
    <string name="error_default">Something went wrong. Please try again!</string>

    <array name="select_options">
        <item>Camera</item>
        <item>Gallery</item>
    </array>
</resources>
